modified circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,4 +38,4 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests! and gen code coverage
-      - run: mvn integration-test
+      - run: mvn install
