--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,10 +39,4 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests! and gen code coverage
-      - run: mvn integration-test cobertura:cobertura
-
-      - store_test_results:
-              path: target/surefire-reports
-      - run:
-          name: Send to CodeCov
-          command: bash <(curl -s https://codecov.io/bash)
+      - run: mvn integration-test
