--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <sonar.projectKey>sreenu-reddy_TestDrivenDevelopment</sonar.projectKey>
+        <sonar.organization>sreenu-reddy-1</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
     <dependencies>
         <dependency>
