modified circle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   one:
     docker:
       # specify the version you desire here
-      - image: 'circleci/openjdk:11-jdk'
+      - image: circleci/openjdk:11-jdk
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -41,22 +41,27 @@ jobs:
 
       # run tests! and gen code coverage
       - run: mvn integration-test
+      - persist_to_workspace:
+          root: .
+          paths:
+            - target/*
 
   two:
     docker:
-      - image: 'circleci/openjdk:11-jdk'
+      - image: circleci/openjdk:11-jdk
     steps:
       - checkout
+      - attach_workspace:
+          at: .
       - run:
           name: Analyze on SonarCloud
           command: mvn verify sonar:sonar
 
   workflows:
-    version: 2.1
-    one_and_two:
+    main:
       jobs:
         - one
         - two:
+            context: SonarCloud
             requires:
               - one
-            context: SonarCloud
