--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   one:
     docker:
       # specify the version you desire here
-      - image: circleci/openjdk:11-jdk
+      - image: 'circleci/openjdk:11-jdk'
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -48,7 +48,7 @@ jobs:
 
   two:
     docker:
-      - image: circleci/openjdk:11-jdk
+      - image: 'circleci/openjdk:11-jdk'
     steps:
       - checkout
       - attach_workspace:
