modified travis config added jacoco and coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,9 @@ jdk: openjdk11
 
 install: true
 
+cache:
+  directories:
+    - $HOME/.m2
+
 script:
-  - mvn clean verify
+  - mvn clean verify jacoco:report coveralls:report
