modified travis config added jacoco and coveralls

--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,6 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-
-        <sonar.projectKey>sreenu-reddy_TestDrivenDevelopment</sonar.projectKey>
-        <sonar.organization>sreenu-reddy-1</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
@@ -162,5 +158,15 @@
             </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.6</version>
+            </plugin>
+        </plugins>
+
+    </reporting>
 
 </project>
