--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: java
 
 jdk: openjdk11
 
+after_success:
+  - mvn clean test jacoco:report coveralls:repoprt
+
 install: true
 
 cache:
@@ -9,4 +12,4 @@ cache:
     - $HOME/.m2
 
 script:
-  - mvn clean verify jacoco:report coveralls:report
+  - mvn clean verify jacoco:report
