--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ cache:
 
 
 script:
-  - mvn clean verify jacoco:report coveralls:report
+  - mvn clean verify jacoco:report coveralls:report sonar:sonar
